# Proxion

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  setup.sh
octopus/: pyproject.toml
octopus/octopus/arch/evm/: cfg.py  disassembler.py  evm.py
octopus/octopus/core/: memory.py  storage.py
octopus/octopus/engine/: explorer.py
proxion/: .gitignore  AdvCheck.py  Check.py  Config.py  Dockerfile  Parser.py  README  SourceCrawler.py  Throttler.py  __main__.py  bytecode_map.py  requirments.txt  solc_install.sh
slither/: setup.py
slither/slither/utils/: function.py
tools/: adv-check-proxies-db.py  adv-check-proxies-func.py  adv-check-proxies.py  dump-storage-collisions.py  etherscan  exp.py  filter_safe.py  filter_safe.sh  gather-slither-collisions.py  kill-query  parallel.citation  prepare_dataset.py  repl.py  scan-proxies  scan-proxies-db.py  scan-proxies-join  scan-proxies-run  slither-check-by-hash.py  slither-check-proxies.py  study-storage-collisions.py  utils.py
tools/CompareUSCHunt/: compare.py  extract_USCHunt_result.py  proxy.py  run_USCHunt.py  run_USCHunt.sh
tools/analysis/: all-collisions.sql  function-collision-cross-check.py  function-collision.py  pairs.sql  storage-collision.py
tools/dataset/: restructure.py
tools/dataset/bigquery/: count-past-contracts.sql  discover-past-contracts.py  get-past-contracts.sql
tools/dataset/bytecode_hash/: bytecode_hash.sql  calc-bytecode-hash.py  source-address.sql
tools/dataset/icdcs/: b1.sql  b2.sql  (+1 more)
tools/rate-limiting-proxy/: nginx.conf  test.py
tools/source_crawler/: scrapy.cfg
(+11 files in other folders)
