[tool.poetry]
name = "octopus"
version = "0.3.5"
description = "Security analysis framework for WebAssembly module (wasm) and Blockchain Smart Contract (BTC/ETH/EOS/NEO). Modified for ProxyChecker."
authors = ["Patrick Ventuzelo"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
z3-solver = ">=4.5"
requests = ">=2.18.4"
graphviz = ">=0.8.3"
wasm = ">=1.1"
eth-hash = {extras = ["pycryptodome"], version = "^0.5.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
